<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.moviedetail.MovieDetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/txtMovieName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dp_4"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="visible"
                    tools:text="Title" />

                <TextView
                    android:id="@+id/txtVoteAvg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="14sp"
                    android:visibility="visible"
                    tools:text="Vote Average" />

                <TextView
                    android:id="@+id/txtLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="14sp"
                    tools:text="@string/language_title" />

                <TextView
                    android:id="@+id/txtPopularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="14sp"
                    tools:text="@string/popularity_title" />

                <TextView
                    android:id="@+id/txtReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="14sp"
                    tools:text="Release Date" />

                <TextView
                    android:id="@+id/txtReleaseStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="14sp"
                    tools:text="@string/release_status_title" />

                <TextView
                    android:id="@+id/txtOverView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/overview"/>

                <TextView
                    android:id="@+id/txtOverViewDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="12sp"
                    tools:text="Description" />

                <TextView
                    android:id="@+id/txtProduction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/production_companies"
                    tools:text="@string/production_companies" />

                <HorizontalScrollView
                    android:id="@+id/scrollViewProd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvProduction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" />
                </HorizontalScrollView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnCast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:layout_marginRight="32dp"
                        android:layout_weight="1"
                        android:text="@string/cast"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/btnReviews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:layout_weight="1"
                        android:text="@string/reviews"
                        android:textAllCaps="false" />
                </LinearLayout>


                <TextView
                    android:id="@+id/txtSimilarMovies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/similar_movies"
                    tools:text="@string/similar_movies" />

                <HorizontalScrollView
                    android:id="@+id/scrollViewSimilar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvSimilarMovies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" />
                </HorizontalScrollView>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/layoutError"
        layout="@layout/raw_error_view"/>
</RelativeLayout>